# uwp-transcode-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  search-index.js  settings.html  source-files.js
windows_media_transcoding_bindings/: Cargo.toml  all.html  build.rs  index.html
windows_media_transcoding_bindings/src/: lib.rs
windows_media_transcoding_bindings/windows/: index.html  sidebar-items.js
windows_media_transcoding_bindings/windows/data/: index.html  sidebar-items.js
windows_media_transcoding_bindings/windows/foundation/: index.html  sidebar-items.js  struct.AsyncActionCompletedHandler.html  struct.AsyncActionProgressHandler.html  struct.AsyncActionWithProgressCompletedHandler.html  struct.AsyncOperationCompletedHandler.html  struct.AsyncOperationProgressHandler.html  struct.AsyncOperationWithProgressCompletedHandler.html  struct.AsyncStatus.html  struct.DateTime.html  struct.EventRegistrationToken.html  struct.HResult.html  struct.IAsyncAction.html  struct.IAsyncActionWithProgress.html  struct.IAsyncInfo.html  struct.IAsyncOperation.html  struct.IAsyncOperationWithProgress.html  struct.IClosable.html  struct.IPropertyValue.html  struct.IReference.html  struct.IStringable.html  struct.IUriEscapeStatics.html  struct.IUriRuntimeClass.html  struct.IUriRuntimeClassFactory.html  struct.IUriRuntimeClassWithAbsoluteCanonicalUri.html  struct.IWwwFormUrlDecoderEntry.html  struct.IWwwFormUrlDecoderRuntimeClass.html  struct.IWwwFormUrlDecoderRuntimeClassFactory.html  struct.Point.html  struct.PropertyType.html  struct.Rect.html  struct.Size.html  struct.TypedEventHandler.html  struct.Uri.html  struct.WwwFormUrlDecoder.html  struct.abi_AsyncActionCompletedHandler.html  struct.abi_AsyncActionProgressHandler.html  struct.abi_AsyncActionWithProgressCompletedHandler.html  struct.abi_AsyncOperationCompletedHandler.html  struct.abi_AsyncOperationProgressHandler.html  (+18 more)
windows_media_transcoding_bindings/windows/media/: index.html  sidebar-items.js
windows_media_transcoding_bindings/windows/storage/: index.html  sidebar-items.js  struct.CreationCollisionOption.html  struct.FileAccessMode.html  struct.FileAttributes.html  struct.IStorageFile.html  struct.IStorageFile2.html  struct.IStorageFilePropertiesWithAvailability.html  struct.IStorageFileStatics.html  struct.IStorageFileStatics2.html  struct.IStorageFolder.html  struct.IStorageFolder2.html  struct.IStorageFolder3.html  struct.IStorageFolderStatics.html  struct.IStorageFolderStatics2.html  struct.IStorageItem.html  struct.IStorageItem2.html  struct.IStorageItemProperties.html  struct.IStorageItemProperties2.html  struct.IStorageItemPropertiesWithProvider.html  struct.IStorageLibraryChange.html  struct.IStorageLibraryChangeReader.html  struct.IStorageLibraryChangeTracker.html  struct.IStorageProvider.html  struct.IStorageProvider2.html  struct.IStorageStreamTransaction.html  struct.IStreamedFileDataRequest.html  struct.NameCollisionOption.html  struct.StorageDeleteOption.html  struct.StorageFile.html  struct.StorageFolder.html  struct.StorageItemTypes.html  struct.StorageLibraryChange.html  struct.StorageLibraryChangeReader.html  struct.StorageLibraryChangeTracker.html  struct.StorageLibraryChangeType.html  (+29 more)
(+310 files in other folders)
