[package]
name = "uwp-transcode"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
winapi = { version = "0.3.9", features = [ "fileapi" ] }
windows_media_transcoding_bindings = { path = "./windows_media_transcoding_bindings" }
# winrt = "0.7.2"
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "375fca433bb77e097681e63a22562d0f8d3dec1e" }

[dev-dependencies]
futures = "0.3.6"

[workspace]
members = [ "windows_media_transcoding_bindings" ]
