[package]
name = "uwp-transcode"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
winapi = { version = "0.3.9", features = [ "fileapi" ] }
windows_media_transcoding_bindings = { path = "./windows_media_transcoding_bindings" }
winrt = "0.7.2"

[dev-dependencies]
futures = "0.3.7"

[workspace]
members = [ "windows_media_transcoding_bindings" ]
