[package]
name = "uwp-transcode"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[[bin]]
name = "transcode"
required-features = [ "cli" ]

[dependencies]
winapi = { version = "0.3.9", features = [ "fileapi" ] }
windows_media_transcoding_bindings = { path = "./windows_media_transcoding_bindings" }
# winrt = "0.7.2"
winrt = { git = "https://github.com/microsoft/winrt-rs", rev = "375fca433bb77e097681e63a22562d0f8d3dec1e" }

# Optional
argh = { version = "0.1.3", optional = true }
futures = { version = "0.3.6", default-features = false, optional = true }

[dev-dependencies]
futures = "0.3.8"

[workspace]
members = [ "windows_media_transcoding_bindings" ]

[features]
cli = [ "argh", "futures" ]
