[package]
name = "windows_media_transcoding_bindings"
version = "0.0.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
license = "MIT"

[dependencies]
winrt = "0.8.0"

[build-dependencies]
winrt = "0.8.0"

[package.metadata.winrt.dependencies]
"Microsoft.Windows.SDK.Contracts" = "10.0.19041.1"
